--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 </head>
 <body>
 
-  <h1>I love you ❤️</h1>
-  <p>Do you love me? 😳</p>
+  <h1>I Love You Shahanaj❤️</h1>
+  <p>Do You Love Me? 😳</p>
 
   <div class="buttons">
     <button id="yesBtn">Yes</button>
