--- a/cute.html
+++ b/cute.html
@@ -27,7 +27,7 @@
 <body>
 
   <h1>Yeah! I love you too! 💕</h1>
-  <img src="D:\New folder\IMG_20250501_174624.jpg" alt="Cute Love GIF">
+  <img src="IMG_20250501_174624.jpg" alt="Cute Love GIF">
 
 </body>
 </html>
